--- a/pair.html
+++ b/pair.html
@@ -142,12 +142,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text"> JEEPERS CREEPERS-XMD PAIR CODE</h3>
+            <h3 class="centered-text"> T-R-O-U-B-L-E-XMD PAIR CODE</h3>
             <br>
-            <h6>Coded by real jeepers creepers .</h6>
+            <h6>Coded by  †💖R🍥Ö💦Ú🔱ß🍷L🥺È .</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
-              <input placeholder="25471726xxxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
+              <input placeholder="25474221xxxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
               <button id="submit">Submit</button>
             </div>
             
