--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JEEPERS CREEPERS-XMD PAIRING SITE</title>
+  <title>T-R-O-U-B-L-E-XMD PAIRING SITE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image:  url("https://files.catbox.moe/tq1dtv.jpg"); /* set the background image */
+      background-image:  url("https://files.catbox.moe/6fzejo.jpg"); /* set the background image */
     }
 
     .btn {
@@ -76,13 +76,13 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://github.com/lovertoxic-tech`)" class="btn">follow on GitHub</button>
+  <button onclick="window.open(`https://github.com/spartaspiceSMR/T-R-O-U-B-L-E-XMD/tree/main`)" class="btn">follow on GitHub</button>
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
-  <button onclick="window.open(`https://github.com/toxiclover-tech/TOXIC-LOVER-MD`)" class="btn">github</button>
-  <button onclick="window.open(`https://wa.link/rv24hy`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/lovertoxic/JEEPERS-CREEPERS-XMD-`)" class="btn">Heroku deploy</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/EQdgnmlMEuhGR9jF9nTpnE`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VawCel7GOj9ktLjkxQ3g`)" class="btn">Wa Channel</button>
+  <button onclick="window.open(`https://github.com/spartaspiceSMR/T-R-O-U-B-L-E-XMD/tree/main`)" class="btn">github</button>
+  <button onclick="window.open(`https://wa.me/message/Q4MHUM4UA2F4H1`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/spartaspiceSMR/T-R-O-U-B-L-E-XMD-`)" class="btn">Heroku deploy</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/H8C69FLe1PA01YLOvSC1dw`)" class="btn">Wa Group</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VbAyOud7tkjGoK6knn2D`)" class="btn">Wa Channel</button>
 
 
   
